--- a/package.json
+++ b/package.json
@@ -3,17 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.28",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-axios": "^2.0.3",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "^3.7.5"
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-thunk": "^2.3.0",
+    "todomvc-app-css": "^2.3.0",
+    "typescript": "^3.7.5",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^3.4.7"
   }
 }
